--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <p>名前・ニックネーム</p>
               <input type="text" id="b-name">
               <p>感想</p>
-              <textarea id="b-body"></textarea>
+              <textarea id="b-body" maxlength="36"></textarea>
               <p>投稿前に内容を確認！</p>
 
               <script>
@@ -54,7 +54,7 @@
           <div class="board-right-wrapper">
             <div class="board-right">
               <div class="comment">
-                <p>感想を投稿する上での注意事項、来場者への挨拶、コメントを書く</p>
+                <p>感想を投稿する上での注意事項、来場者への挨拶、コメントを書く　文字数は36文字まで入力可能など</p>
               </div>
             </div>
           </div>
