--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ごうイベント感想フォーム</title>
+    <title>どきどき☆しもごうワ～ルド感想フォーム</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -11,7 +11,7 @@
 
     <div class="header">
       <div class="header-wrapper">
-          <div class="header-logo">ごうイベント感想</div>
+          <div class="header-logo">しもごうワ～ルド感想</div>
       </div>
     </div>
 
@@ -43,7 +43,7 @@
                   //console.log(url)
 
                   const response = await fetch(url,{headers: { 'Content-Type': 'text/plain'}})
-                  console.log(result)
+                  //console.log(result)
                 }
               </script>
 
