--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
           <div class="board-right-wrapper">
             <div class="board-right">
               <div class="comment">
-                <p>感想を投稿する上での注意事項、来場者への挨拶、コメントを書く　文字数は36文字まで入力可能など</p>
+                <p class="greeting">どきどき☆しもごうワ～ルドに<br>ようこそ！<br>楽しんでいただけましたか？<br>帰る頃には、貴方も下郷町が気になっていますように…
+                  <br><br>- - - - - - - - - - - - - - - - - -<br>【 感想を書く上での注意事項 】<br></p>
+                <p>
+                  <br>・名前の欄は、本名フルネームを書かないようにしてください。
+                  <br>・感想は、36字以内で書いてください。
+                  <br>・他人が読んで、不快になるようなことは書かないでください。</p>
               </div>
             </div>
           </div>
